--- a/templates/datapembayaran.html
+++ b/templates/datapembayaran.html
@@ -207,9 +207,7 @@
                     class="rounded mx-auto d-block" style="max-width: 300px;">
                 <div class="d-flex justify-content-end">
                     <button type="button" class="btn btn-primary" id="submit"
-                        onclick="accept_pembayaran('{{pembayaran._id}}', '{{pembayaran.user}}')">Accept</button>
-                    <button type="button" class="btn btn-primary" id="submit">Deny</button>
-                </div>
+                        onclick="accept_pembayaran('{{pembayaran._id}}', '{{pembayaran.user}}')">Accept</button>                </div>
             </div>
             {% endfor %}
         </div>
