change background color and footer color

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,10 +38,6 @@
         /* Navbar End */
 
         /* Content Start  */
-        body {
-            background-color: #eff8ff;
-        }
-
         #image-container {
             text-align: center;
             margin-top: 20px;
@@ -84,6 +80,13 @@
         /* FAQ End */
 
         /* Footer Start */
+        body {
+            background-color: #eff8ff;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+
         #footer, #faq{
             padding-top: 25px;
             margin-top: auto;
