--- a/templates/discover.html
+++ b/templates/discover.html
@@ -66,6 +66,7 @@
         }
 
         #card {
+            background-color: white;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
@@ -89,13 +90,16 @@
 
         /* Footer Start */
         body {
+            background-color: #eff8ff;
             display: flex;
             flex-direction: column;
             min-height: 100vh;
         }
 
         #footer {
+            padding-top: 25px;
             margin-top: auto;
+            background-color: white;
         }
 
         .footer {
@@ -370,7 +374,6 @@
 
 <!-- Footer Start-->
 <footer id="footer">
-    <hr>
     <div class="container">
         <div class="row">
             <img src="/static/logo.png" alt="" style="max-width: 20%; height: auto;">
@@ -415,7 +418,6 @@
         </div>
     </div>
     <br>
-    <hr>
     <div class="footer">
         <p>&copy; 2023 SkillHub. All rights reserved.</p>
     </div>
