--- a/templates/previewcourse.html
+++ b/templates/previewcourse.html
@@ -45,6 +45,7 @@
         }
 
         #course {
+            background-color: white;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
@@ -67,13 +68,16 @@
 
         /* Footer Start */
         body {
+            background-color: #eff8ff;
             display: flex;
             flex-direction: column;
             min-height: 100vh;
         }
 
         #footer {
+            padding-top: 25px;
             margin-top: auto;
+            background-color: white;
         }
 
         .footer {
@@ -193,7 +197,6 @@
 </body>
 <!-- Footer Start-->
 <footer id="footer">
-    <hr>
     <div class="container">
         <div class="row">
             <img src="/static/logo.png" alt="" style="max-width: 20%; height: auto;">
@@ -238,7 +241,6 @@
         </div>
     </div>
     <br>
-    <hr>
     <div class="footer">
         <p>&copy; 2023 SkillHub. All rights reserved.</p>
     </div>
