--- a/templates/register.html
+++ b/templates/register.html
@@ -11,6 +11,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 
     <style>
+        body {
+            background-color: #eff8ff;
+        }
         #navbar {
             margin: 10px;
         }
