--- a/templates/index.html
+++ b/templates/index.html
@@ -65,6 +65,9 @@
             border-radius: 20px;
         }
 
+        .col h3 {
+            margin-top: 10px;
+        }
         /* Content End  */
 
         /* FAQ Start */
