--- a/templates/index.html
+++ b/templates/index.html
@@ -183,6 +183,7 @@
                 </div>
                 <div class="row row-cols-lg-5 row-cols-2 row-cols-md-3">
                     {% for course in course_list %}
+                    {% if loop.index <= 4 %}
                     <div class="col" id="card">
                         <div class="text-center position-relative">
                             <a href="#!"><img src="{{course.image}}" alt="Grocery Ecommerce Template"
@@ -195,6 +196,7 @@
                             </a>
                         </div>
                     </div>
+                    {% endif %}
                     {% endfor %}
                 </div>
             </div>
